add login and register

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,21 +1,29 @@
 <section>
   <div class="container mt-5">
     <div class="row d-flex justify-content-center align-items-center">
-      <div class="col col-xl-10">
-        <div class="card" style="border-radius: 1rem;">
+      <div class="col col-xl-10" >
+        <div class="alert alert-danger text-center" *ngIf="error" (click)="error=null">
+          <b>{{error}}</b>
+          <p class="text-muted">(click to close)</p>
+       </div>
+        <div *ngIf="isLoading" style="text-align: center;" class="mt-5">
+          <app-loading-spinner></app-loading-spinner>
+       </div>
+        <div class="card" *ngIf="!isLoading">
           <div class="row g-0">
-            <div class="col-md-6 col-lg-5 d-none d-md-block">
+            <div class="col-md-6 col-lg-5 d-none d-md-block " >
               <img
                 src="https://play-lh.googleusercontent.com/1VafwOTCRKTDKXYUbGHSXdMLUip7HJgaLEPVu6o5FnqB06N0zzaTQ88lzxTRlfYkNVk"
-                alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
+                alt="login form" class="img-fluid"/>
             </div>
-            <div class="col-md-6 col-lg-7 d-flex align-items-center">
-              <div class="card-body p-4 p-lg-5 text-black">
+
+            <div class="col-md-6 col-lg-7 px-3 d-flex align-items-center">
+              <div class="card-body text-black">
 
                 <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
 
-                  <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">
-                    {{loginMode? 'Sign into your account' : 'Sign up new account'}}</h5>
+                  <h5 class="fw-normal mb-3" style="letter-spacing: 1px;">
+                    {{loginMode? 'Sign into existing account' : 'Create new account'}}</h5>
 
 
                   <div class="form-floating mb-3">
@@ -35,9 +43,9 @@
                       [disabled]="!authForm.valid">{{loginMode? "Login" : "Register"}} </button>
                   </div>
 
-                  <p class="mb-5 pb-lg-2" style="color: #393f81;">
+                  <p  style="color: #393f81;">
                     {{loginMode? "Don't have an account?" : "Already have an account?"}}
-                    <a href="#!" style="color: #393f81;" (click)="loginMode=!loginMode">
+                    <a href="" (click)="loginMode=!loginMode">
                       {{loginMode? "Register here" : "Login here"}} </a>
                   </p>
                 </form>
@@ -49,3 +57,7 @@
     </div>
   </div>
 </section>
+
+  
+
+
