--- a/src/app/auth/auth.component.css
+++ b/src/app/auth/auth.component.css
@@ -6,3 +6,15 @@
 img{
   border-radius: 2rem 0 0 2rem;
 }
+
+.fw-normal{
+  letter-spacing: 1px;
+}
+
+.switchAccountText{
+  color: #393f81;
+}
+.loginModeText{
+  text-decoration: underline;
+  cursor: pointer;
+}
