--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,8 +15,16 @@
         <li *ngIf="!isAuthenticated" class="nav-item">
           <a class="nav-link" aria-current="page" routerLink="/auth">Login</a>
         </li>
-        <li *ngIf="isAuthenticated" class="nav-item">
-          <a class="nav-link" aria-current="page" (click)="onLogout()">Logout</a>
+        <!--<li *ngIf="isAuthenticated" class="nav-item">
+          <a class="nav-link" aria-current="page" (click)="onLogout()"><b>Logout</b> </a>
+        </li>-->
+        <li class="nav-item dropdown" *ngIf="isAuthenticated">
+          <a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <b>{{getUser()}}</b>
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="#" (click)="onLogout()">Logout</a></li>
+          </ul>
         </li>
       </ul>
     </div>
