add weather for added city

--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -1,3 +1,12 @@
 <div class="container mt-5">
-  <p>weather works!</p>
+  <div class="row sticky-top pt-2">
+    <div class="col mb-5 ">
+      <app-city-add ></app-city-add>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <app-city-list></app-city-list>
+    </div>
+  </div>
 </div>
