add 5 day forecast

--- a/src/app/weather/city-list/city-weather-item/city-weather-item.component.css
+++ b/src/app/weather/city-list/city-weather-item/city-weather-item.component.css
@@ -5,3 +5,9 @@
 .card{
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
+
+.card:hover{
+  cursor: pointer;
+  transform: scale(1.05);
+  transition-duration: 0.3s;
+}
