--- a/src/app/weather/city-list/city-weather-item/city-weather-item.component.css
+++ b/src/app/weather/city-list/city-weather-item/city-weather-item.component.css
@@ -8,6 +8,10 @@
 
 .card:hover{
   cursor: pointer;
-  transform: scale(1.05);
+  transform: scale(1.02);
   transition-duration: 0.3s;
+}
+
+.card:hover h4{
+  text-decoration: underline;
 }
