--- a/src/app/weather/city-add/city-add.component.html
+++ b/src/app/weather/city-add/city-add.component.html
@@ -3,7 +3,7 @@
     <div class="col-xl-7 col-md-12">
       <div class="input-group mb-3">
         <input type="text" class="form-control form-control-lg" formControlName="cityName"
-          placeholder="Zagreb, London...">
+          placeholder="Zagreb, London..." autocomplete="street-address">
         <button type="submit" class="btn btn-primary" [disabled]="!addCityForm.valid">Add City</button>
       </div>
     </div>
