--- a/src/app/weather/city/city.component.html
+++ b/src/app/weather/city/city.component.html
@@ -8,12 +8,12 @@
     </div>
 
     <div class="row justify-content-center mt-4 mb-4">
-      <div class="col-xs-12 col-lg-2 text-center " *ngFor="let c of cityList" (click)="onShowCityHourly(c.dt_txt)">
+      <div class="col-xs-12 col-lg-2 text-center " *ngFor="let city of cityList" (click)="onShowCityHourly(city.dt_txt)">
         <div class="card  mb-3 weatherCard">
           <div class="card-body">
-            <h5 class="card-title">{{c.dt_txt | date:'EEE'}}</h5>
-            <img src="http://openweathermap.org/img/wn/{{c.weather[0].icon}}@2x.png">
-            <p class="card-text">{{c.main.temp_max | number: NUMBER_FORMAT}}° <span class="text-muted">{{c.main.temp_min
+            <h5 class="card-title">{{city.dt_txt | date:'EEE'}}</h5>
+            <img src="{{openWeatherIconUrl}}{{city.weather[0].icon}}@2x.png">
+            <p class="card-text">{{city.main.temp_max | number: NUMBER_FORMAT}}° <span class="text-muted">{{city.main.temp_min
                 |
                 number: NUMBER_FORMAT}}° </span></p>
           </div>
