--- a/src/app/weather/city-list/city-weather-item/city-weather-item.component.html
+++ b/src/app/weather/city-list/city-weather-item/city-weather-item.component.html
@@ -1,7 +1,7 @@
 <div class="card mb-5 border" *ngIf="cityWeather$ |async as cityWeather">
   <div class="card-body mt-2" routerLink="{{cityWeather.name}}">
 
-    <div class="d-flex" >
+    <div class="d-flex">
       <h4 class="flex-grow-1 text-muted">{{cityWeather.name}}, {{cityWeather.sys.country}}</h4>
       <h6 class="text-muted">{{time|date:'short'}}</h6>
     </div>
@@ -14,15 +14,30 @@
       </svg>
     </button>
 
+    <a *ngIf="favorite==false" class="btn btn-outline-success btn-sm ms-2" (click)="onFavorite(true)" >
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+        <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+      </svg>
+    </a>
 
-    <div class="d-flex flex-column text-center" >
+    <button *ngIf="favorite==true" class="btn btn-outline-primary btn-sm ms-2" (click)="onFavorite(false)" >
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star" viewBox="0 0 16 16">
+        <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+      </svg>
+    </button>
+
+
+
+
+
+    <div class="d-flex flex-column text-center">
       <h6 class="display-4 mb-0 font-weight-bold">
         {{cityWeather.main.feels_like | number: NUMBER_FORMAT}}°C
       </h6>
       <span class="small text-muted">{{cityWeather.weather[0].description}}</span>
     </div>
 
-    <div class="d-flex align-items-center" >
+    <div class="d-flex align-items-center">
       <div class="flex-grow-1">
         <div>
           <span class="ms-1"> Wind: {{cityWeather.wind.speed}} km/h </span>
